fixed animation scrollbar pop up+ adding padding

--- a/src/app/login/main-page/contacts/single-contact/single-contact.scss
+++ b/src/app/login/main-page/contacts/single-contact/single-contact.scss
@@ -37,6 +37,8 @@
   display: flex;
   align-items: center;
   gap: 54px;
+  padding-top: 40px;
+  overflow: hidden;
 
   .sc_menu {
     gap: 8px;
